<resources>
    <string name="app_name">CO3043 Mobile Virtual Lab</string>
    <string name="Test_text">This is text contain</string>
    <string name="button">Button</string>
    <string name="childtext">This is Child Activity</string>
    <string name="HCMUT">ĐẠI HỌC QUỐC GIA THÀNH PHỐ HỒ CHÍ MINH
                         TRƯỜNG ĐẠI HỌC BÁCH KHOA</string>
    <string name="model_image">Hình thiết bị</string>
    <string name="main_view">MÀN HÌNH CHÍNH</string>
    <string name="backward"><![CDATA[<<]]></string>
    <string name="info">Info</string>
    <string name="practice">Practice</string>
</resources>