<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/background1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clicked"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/info" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleX="0.5"
        android:contentDescription="@string/model_image"
        android:layout_marginBottom="20dp"
        android:id="@+id/model_image" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/info_button"
            android:layout_marginEnd="20dp"
            android:background="@drawable/mainview_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/practice_button"
            android:background="@drawable/mainview_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:paddingVertical="5dp"
                android:text="@string/practice" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scrollbars="horizontal"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp"
        android:id="@+id/models" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/banner"
        android:id="@+id/banner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_view"
            android:layout_centerInParent="true"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/main_view_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="@string/backward"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:id="@+id/backward"
            android:gravity="center_vertical"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>